# sick-ahm36

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.ps1
examples/: read_speed_position.py
sick_ahm36/: __init__.py  config.py  decode.py  encoder.py  gui.py  j1939.py  profile.py  protocol.py  sim.py  transport.py
tests/: test_config.py  test_decode.py  test_profile.py  test_transport.py
